--- a/octoprint/docker-compose.yml
+++ b/octoprint/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3'
 
 services:
   octoprint:
+    container_name: octoprint
     image: octoprint/octoprint
     restart: unless-stopped
     ports:
