--- a/filebrowser/docker-compose.yml
+++ b/filebrowser/docker-compose.yml
@@ -3,6 +3,9 @@ services:
   filebrowser:
     image: filebrowser/filebrowser
     container_name: filebrowser
+    restart: unless-stopped
+    environment:
+      - FB_NOAUTH=true
     ports:
       - 80:80
     volumes:
